--- a/styles.css
+++ b/styles.css
@@ -465,7 +465,7 @@ a{
     background-image: url(./images/projects/Project4.png);
 } */
 
-@media (max-width:1300px) {
+@media (max-width:1020px) {
     .page-header {
       padding-top: 30px;
       color: var(--bgOrange);
@@ -519,6 +519,10 @@ a{
     }
     .project-card:hover .project-content {
       scale: 0.55;
+    }
+    .skills-container{
+    flex-wrap: wrap;
+    flex-direction: row;
     }
   }
 
