--- a/styles.css
+++ b/styles.css
@@ -437,6 +437,10 @@ a{
     color: white;
     font-size: 35px;
     transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
 }
 
 .icon:hover{
